# CPP_PatternsGOF

./: Bomb.cpp  Bomb.h  BombDecorator.h  CMakeLists.txt  Command.h  DeleteDynamicObjectCommand.h  DeleteStaticObjectCommand.h  DestroyableGroundObject.h  DropBombCommand.h  DropBombDecoratorCommand.h  DynamicObject.h  GameObject.h  Ground.cpp  Ground.h  House.cpp  House.h  LevelGUI.cpp  LevelGUI.h  MyTools.cpp  MyTools.h  Plane.cpp  Plane.h  SBomber.cpp  SBomber.h  SBomberProject.cpp  Tank.cpp  Tank.h
FileLoggerSingleton/: FileLoggerSingleton.cpp  FileLoggerSingleton.h  LoggerSingleton.cpp  LoggerSingleton.h
FileLoggerSingletone/: FileLoggerSingletone.cpp  FileLoggerSingletone.h
